RSC-54 fix(bug-fix): add text-align: center to TransferAccount.module.scss

--- a/src/components/Accounts/Transfer/TransferAccount/TransferAccount.module.scss
+++ b/src/components/Accounts/Transfer/TransferAccount/TransferAccount.module.scss
@@ -7,10 +7,12 @@
 
 .text {
   font-size: 14px;
+  text-align: center;
 }
 
 .name {
   font-size: 23px;
+  text-align: center;
 }
 
 .iconWrapper {
